# word-game

./: CODE_STYLE.md  README.md  README.ru.md  components.json  docker-compose.yaml  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
backend/: .env.dev  .env.prod  astro.config.mjs  package.json  pyproject.toml
backend/scripts/: generate_firebase_data.py
backend/src/: main.py  run.py
backend/src/api/dependencies/: __init__.py  firebase.py
backend/src/api/v1/: __init__.py
backend/src/api/v1/single_player/: __init__.py
backend/src/core/: firebase.py  lifespan.py  settings.py  types.py
backend/src/core/firebase/: __init__.py  client.py  config.py
backend/src/database/single_player/: collections.py
backend/src/lib/: constants.ts  schemas.ts
backend/src/lib/firebase/: config.ts  index.ts
backend/src/pages/api/word-game/single-player/: index.ts
backend/src/schemas/: api.py
backend/typings/firebase_admin/: __about__.pyi  __init__.pyi  credentials.pyi
firebase/: .firebaserc  Dockerfile  firebase.json  firestore.rules
frontend/: .env.dev  .gitignore  components.json  firebase.json  firestore.rules  package.json  prettier.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  globals.css
frontend/src/lib/: api.ts  constants.ts  router.ts  utils.ts
src/: App.svelte  app.css  globals.css  main.ts
src/api/: word.ts
src/lib/: constants.ts  firebase.ts  schemas.ts  utils.ts
src/routes/: index.svelte
src/store/: gamePreferences.ts  gameState.ts  userState.ts  words.ts
(+145 files in other folders)
