[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "mrdsx", email = "andre0.castlegames@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "firebase-admin>=7.3.0",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.44.0",
]
